# autonomous-research-agent

./: .dockerignore  .env.example  .gitignore  =2.1.0  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  autonomous_agent.py  autonomous_tools.py  chat_research_agent.py  docker-compose.yml  email_service.py  pyproject.toml  requirements.txt  research_agent.py  streamlit_app.py  test_chat.py  test_sdk_direct.py  tools.py  web_research_agent.py  web_research_tools.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: DEVELOPMENT_GUIDE.md
docs/screenshots/: README.md
papers/: research_report_Large Language Models for Code Generation_ Archite_20260106_102401.md  research_report_Retrieval-Augmented Generation _RAG_ for Knowledge_20260106_103224.md
papers/notes/: 20260106_102327_paper_summary_A Survey on Large Language Models for Code Generat.json  20260106_102327_paper_summary_Code Llama_ Open Foundation Models for Code.json  20260106_102328_finding_Key Code LLM Models and Performance.json  20260106_102328_insight_Training Approaches for Code LLMs.json  20260106_102328_paper_summary_Benchmarks and Metrics for Evaluations of Code Gen.json  20260106_102749_paper_summary_Dense Passage Retrieval _DPR_ - Karpukhin et al__ .json  20260106_102749_paper_summary_RAG_ Retrieval-Augmented Generation _Lewis et al__.json  20260106_102831_paper_summary_Corrective RAG _CRAG_ - Yan et al__ 2024.json  20260106_102831_paper_summary_Self-RAG_ Learning to Retrieve_ Generate_ and Crit.json  20260106_102912_paper_summary_Atlas_ Few-shot Learning with Retrieval Augmented .json  20260106_102912_paper_summary_RAG Survey_ Comprehensive Review _Gao et al__ 2024.json  (+3 more)
scripts/: start.bat  start.sh  stop.bat  stop.sh
tests/: __init__.py  conftest.py  test_chat.py  test_chat_agent.py  test_email_service.py  test_sdk_direct.py  test_streamlit_app.py  test_web_research_tools.py
(+38 files in other folders)
