[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-research-agent"
version = "1.0.0"
description = "An AI-powered research assistant built with the Claude Agent SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Research Agent Team"}
]
keywords = [
    "research",
    "ai",
    "claude",
    "agent",
    "pdf",
    "academic",
    "papers"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "claude-agent-sdk>=0.1.18",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.10.0",
    "streamlit>=1.32.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/autonomous-research-agent"
Documentation = "https://github.com/yourusername/autonomous-research-agent#readme"
Repository = "https://github.com/yourusername/autonomous-research-agent"
Issues = "https://github.com/yourusername/autonomous-research-agent/issues"

[project.scripts]
research-agent = "streamlit_app:main"

[tool.setuptools]
packages = ["research_agent"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
